// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Heading > it works with defaults 1`] = `
<h1
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Heading_f5e8bd _size-large_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with families 1`] = `
<h1
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Heading_f5e8bd _size-large_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with families 2`] = `
<h1
  class="_Text_c6fd40 _size-medium_c6fd40 _family-serif_c6fd40 _weight-regular_c6fd40 _Heading_f5e8bd _size-large_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with families 3`] = `
<h1
  class="_Text_c6fd40 _size-medium_c6fd40 _family-mono_c6fd40 _weight-regular_c6fd40 _Heading_f5e8bd _size-large_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with sizes 1`] = `
<h1
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Heading_f5e8bd _size-large_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with sizes 2`] = `
<h2
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Heading_f5e8bd _size-medium_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h2>
`;

exports[`Heading > it works with sizes 3`] = `
<h3
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Heading_f5e8bd _size-small_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h3>
`;

exports[`Heading > it works with weights 1`] = `
<h1
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Heading_f5e8bd _size-large_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with weights 2`] = `
<h1
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-medium_c6fd40 _Heading_f5e8bd _size-large_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with weights 3`] = `
<h1
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-bold_c6fd40 _Heading_f5e8bd _size-large_f5e8bd"
  data-testid="Heading"
>
  Hello world
</h1>
`;
